--- a/Clinica.csproj
+++ b/Clinica.csproj
@@ -46,53 +46,53 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Inicio.cs">
+    <Compile Include="Views\InicioView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Inicio.Designer.cs">
-      <DependentUpon>Inicio.cs</DependentUpon>
+    <Compile Include="Views\InicioView.Designer.cs">
+      <DependentUpon>InicioView.cs</DependentUpon>
     </Compile>
-    <Compile Include="Medicos.cs">
+    <Compile Include="Views\MedicosView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Medicos.Designer.cs">
-      <DependentUpon>Medicos.cs</DependentUpon>
+    <Compile Include="Views\MedicosView.Designer.cs">
+      <DependentUpon>MedicosView.cs</DependentUpon>
     </Compile>
-    <Compile Include="Paciente.cs" />
-    <Compile Include="Pacientes.cs">
+    <Compile Include="Models\Paciente.cs" />
+    <Compile Include="Views\PacientesView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Pacientes.Designer.cs">
-      <DependentUpon>Pacientes.cs</DependentUpon>
+    <Compile Include="Views\PacientesView.Designer.cs">
+      <DependentUpon>PacientesView.cs</DependentUpon>
     </Compile>
-    <Compile Include="PacientesCriar.cs">
+    <Compile Include="Views\PacientesCriarView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="PacientesCriar.Designer.cs">
-      <DependentUpon>PacientesCriar.cs</DependentUpon>
+    <Compile Include="Views\PacientesCriarView.Designer.cs">
+      <DependentUpon>PacientesCriarView.cs</DependentUpon>
     </Compile>
-    <Compile Include="PacientesEditar.cs">
+    <Compile Include="Views\PacientesEditarView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="PacientesEditar.Designer.cs">
-      <DependentUpon>PacientesEditar.cs</DependentUpon>
+    <Compile Include="Views\PacientesEditarView.Designer.cs">
+      <DependentUpon>PacientesEditarView.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Inicio.resx">
-      <DependentUpon>Inicio.cs</DependentUpon>
+    <EmbeddedResource Include="Views\InicioView.resx">
+      <DependentUpon>InicioView.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Medicos.resx">
-      <DependentUpon>Medicos.cs</DependentUpon>
+    <EmbeddedResource Include="Views\MedicosView.resx">
+      <DependentUpon>MedicosView.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Pacientes.resx">
-      <DependentUpon>Pacientes.cs</DependentUpon>
+    <EmbeddedResource Include="Views\PacientesView.resx">
+      <DependentUpon>PacientesView.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="PacientesCriar.resx">
-      <DependentUpon>PacientesCriar.cs</DependentUpon>
+    <EmbeddedResource Include="Views\PacientesCriarView.resx">
+      <DependentUpon>PacientesCriarView.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="PacientesEditar.resx">
-      <DependentUpon>PacientesEditar.cs</DependentUpon>
+    <EmbeddedResource Include="Views\PacientesEditarView.resx">
+      <DependentUpon>PacientesEditarView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
