--- a/Clinica.csproj
+++ b/Clinica.csproj
@@ -46,6 +46,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Funcionarios\FuncionariosCriarView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Funcionarios\FuncionariosCriarView.Designer.cs">
+      <DependentUpon>FuncionariosCriarView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Funcionarios\FuncionariosEditarView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Funcionarios\FuncionariosEditarView.Designer.cs">
+      <DependentUpon>FuncionariosEditarView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Funcionarios\FuncionariosView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Funcionarios\FuncionariosView.Designer.cs">
+      <DependentUpon>FuncionariosView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Funcionarios\Funcionario.cs" />
     <Compile Include="InicioView.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -79,6 +98,15 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Funcionarios\FuncionariosCriarView.resx">
+      <DependentUpon>FuncionariosCriarView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Funcionarios\FuncionariosEditarView.resx">
+      <DependentUpon>FuncionariosEditarView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Funcionarios\FuncionariosView.resx">
+      <DependentUpon>FuncionariosView.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="InicioView.resx">
       <DependentUpon>InicioView.cs</DependentUpon>
     </EmbeddedResource>
@@ -118,7 +146,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Consultas\" />
-    <Folder Include="Funcionarios\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
