Criação da listagem de medicos, controller e alterações nos botões de voltar e deletar

--- a/Clinica.csproj
+++ b/Clinica.csproj
@@ -190,6 +190,8 @@
       <DependentUpon>AmbulatoriosView.cs</DependentUpon>
     </Compile>
     <Compile Include="Medicos\Medico.cs" />
+    <Compile Include="Medicos\MedicoController.cs" />
+    <Compile Include="Medicos\MedicoDAO.cs" />
     <Compile Include="Medicos\MedicosCriarView.cs">
       <SubType>Form</SubType>
     </Compile>
